
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2015-05-29 DariusIII
	* Upd: Replace icons with font-awesome counterparts in Alpha theme.
2016-05-28 ruhllatio
	Fix: Greatly improve TV API search query when specifying ID/Season/Ep etc. Remove var_dump.
	Fix: Wrong array offset
2016-05-27 DariusIII
	* Upd: Use well-sm in all the themes.
	* Fix: Replace boostrap.min.css with Gamma theme custom bootstrap.css
	* Fix: Fix link to autosize.min.js in Alpha theme.
	* Fix: Fix tables layout in Gamma theme by removing table-striped attribute.
2016-05-26 niel
	Fix: Update some bower-asset's version strings to better reflect the version specified.
		Tightened versions for others to err on the side of caution. We can relax later if this
		prooves to be too tight.
2016-05-24 ruhllatio
	Fix: Revert concat cat query to INNER and add WHERE constraint to exclude parentid being NULL
	Chg: Convert browse to use queryCalc method for cached counts to improve performance
	Fix: preid still in use in browse templates causing Pre'd tags to not show up in site view
	Fix: Make queryCalc strip out OFFSET/LIMIT tags from query before caching the SQL_CALC_FOUNDS_ROWS results
2016-05-24 niel
	Fix: Typoes in Changelog.
	Fix: Error checking for fetching SQL versions.
2016-05-23 ruhllatio
	Chg: Improve RequestID query times (and update_releases thread performance) on larger databases
	Chg: Improve all Releases queries for larger databases by preserving join orders of smaller tables
2016-05-19 bart39
	Mrg: Proper CouchPotato implementation #2151 @DariusIII
2016-05-17 niel
	Chg: Remove autopatcher script functionality. Replace with message to use ./zed update nzedb.
2016-05-17 ruhllatio
	Mrg: Feature couchpotato #2148 @DariusIII